@@ -212,7 +212,7 @@
 		<dependency>
 			<groupId>net.lingala.zip4j</groupId>
 			<artifactId>zip4j</artifactId>
-			<version>1.3.2</version>
+			<version>2.11.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
