@@ -3,15 +3,16 @@ package org.fenixedu.legalpt.services.commons.export;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 
+import com.qubit.terra.framework.services.logging.Log;
+import net.lingala.zip4j.io.outputstream.ZipOutputStream;
+import net.lingala.zip4j.model.enums.CompressionLevel;
+import net.lingala.zip4j.model.enums.CompressionMethod;
+import net.lingala.zip4j.model.enums.EncryptionMethod;
 import org.fenixedu.legalpt.domain.report.LegalReportRequest;
 import org.fenixedu.legalpt.domain.report.LegalReportResultFile;
 import org.fenixedu.legalpt.domain.report.LegalReportResultFileType;
 
-import net.lingala.zip4j.exception.ZipException;
-import net.lingala.zip4j.io.ZipOutputStream;
-import net.lingala.zip4j.model.ZipModel;
 import net.lingala.zip4j.model.ZipParameters;
-import net.lingala.zip4j.util.Zip4jConstants;
 import pt.ist.fenixframework.Atomic;
 import pt.ist.fenixframework.Atomic.TxMode;
 
@@ -20,35 +21,32 @@ public class XmlZipFileWriter {
     public static LegalReportResultFile write(final LegalReportRequest reportRequest, final LegalReportResultFile xmlResultFile,
             final String password) {
 
+        final ByteArrayOutputStream baos = createEncryptedZip(xmlResultFile.getFilename(), xmlResultFile.getContent(), password);
+        return baos == null ? null : writeToFile(reportRequest, xmlResultFile, baos);
+    }
+
+    public static ByteArrayOutputStream createEncryptedZip(String fileName, byte[] content, String password) {
+        final ByteArrayOutputStream baos = new ByteArrayOutputStream();
+
+        final ZipParameters parameters = new ZipParameters();
+        parameters.setCompressionMethod(CompressionMethod.DEFLATE);
+        parameters.setCompressionLevel(CompressionLevel.NORMAL);
+        parameters.setEncryptFiles(true);
+        parameters.setEncryptionMethod(EncryptionMethod.ZIP_STANDARD);
+        parameters.setFileNameInZip(fileName);
+
         try {
-            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
-
-            final ZipParameters parameters = new ZipParameters();
-            parameters.setCompressionMethod(Zip4jConstants.COMP_DEFLATE);
-            parameters.setCompressionLevel(Zip4jConstants.DEFLATE_LEVEL_NORMAL);
-            parameters.setEncryptFiles(true);
-            parameters.setEncryptionMethod(Zip4jConstants.ENC_METHOD_STANDARD);
-            parameters.setPassword(password);
-            parameters.setFileNameInZip(xmlResultFile.getFilename());
-            parameters.setSourceExternalStream(true);
-
-            final ZipOutputStream zOut = new ZipOutputStream(baos, new ZipModel());
-            zOut.putNextEntry(null, parameters);
-            zOut.write(xmlResultFile.getContent());
-            zOut.closeEntry();
-
-            zOut.finish();
-            zOut.close();
-
-            return writeToFile(reportRequest, xmlResultFile, baos);
-
-        } catch (ZipException | IOException e) {
-            //TODO: improve error handling
-            e.printStackTrace();
+            ZipOutputStream zipOutputStream = new ZipOutputStream(baos, password.toCharArray());
+            zipOutputStream.putNextEntry(parameters);
+            zipOutputStream.write(content);
+            zipOutputStream.closeEntry();
+            zipOutputStream.close();
+        } catch (IOException e) {
+            Log.error("Error while creating zip output stream", e);
+            return null;
         }
 
-        return null;
-
+        return baos;
     }
 
     @Atomic(mode = TxMode.WRITE)
