@@ -1,3 +1,5 @@
+- Refactor: Updates zip4j logic to version 2.11.5 [#qubIT-Omnis-5739]
+
 2.17.0 (17-04-2024)
 - Refactor: Removes usages of commons-httpclient [#qubIT-Omnis-5730]
 
